Fixes #43 - cards overlapping headers

--- a/client/src/components/Divider.css
+++ b/client/src/components/Divider.css
@@ -1,4 +1,5 @@
 .card-divider {
+    clear: left;
     text-align: right;
     padding-bottom: 0.3em;
     padding-right: 5em;
